--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Document</title>
 </head>
 <body>
-    <script src="login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
