--- a/about.html
+++ b/about.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <main>
+      <h1>ABOUT JOJO</h1>
+      <section>
+        <div>
+          <h2>OUR CREW AND STORY</h2>
+          <p>
+            The concept behind JOJO is built on the idea of serving high-quality cocktails on tap. When we first launched, our cocktails didn’t have the now well-known fixed price of 50 DKK. Instead, we offered a happy hour deal where guests could
+            enjoy cocktails for 50 DKK - a concept that quickly became a hit.
+          </p>
+          <p>
+            The demand grew so strongly that we chose to embrace our customers enthusiasm and make the low price permanent. Since then, we’ve experienced remarkable popularity, not only because our cocktails are delicious and thoughtfully made, but
+            also because they remain affordable without compromising on quality.
+          </p>
+          <p>The combination of craftsmanship and accessible pricing continues to be at the heart of JOJO’s identity.</p>
+        </div>
+        <div>
+          <!-- mangler img -->
+        </div>
+      </section>
+      <section>
+        <h2>INGREDIENTS</h2>
+        <article>
+          <div>
+            <!-- mangler 2x img -->
+          </div>
+          <div>
+            <h3>ORGANIC AND HOMEMADE</h3>
+            <p>
+              At JOJO, our cocktails are crafted from organic, freshly pressed juices, which forms the foundation of both our flavour and quality. We place great emphasis on freshness - therefore all ingredients are prepared, mixed, and assembled in
+              our dedicated remote kitchen in Vanløse. Here, every component is carefully developed before being filled into kegs and distributed to our bars. This process ensures consistency, vibrant flavours, and speed of service.
+            </p>
+            <a href="menu.html">SEE OUR MENU</a>
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div>
+            <!-- mangler img -->
+          </div>
+          <div>
+            <h4>LEMON</h4>
+            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+          </div>
+          <div>
+            <h4>USED IN</h4>
+            <!-- mangler links til drinks -->
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div>
+            <!-- mangler img -->
+          </div>
+          <div>
+            <h4>RUM</h4>
+            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+          </div>
+          <div>
+            <h4>USED IN</h4>
+            <!-- mangler links til drinks -->
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div>
+            <!-- mangler img -->
+          </div>
+          <div>
+            <h4>COCONUT</h4>
+            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+          </div>
+          <div>
+            <h4>USED IN</h4>
+            <!-- mangler links til drinks -->
+          </div>
+        </article>
+      </section>
+      <section>
+        <article>
+          <div>
+            <!-- mangler img -->
+          </div>
+          <div>
+            <h4>JACK D WHISKEY</h4>
+            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+          </div>
+          <div>
+            <h4>USED IN</h4>
+            <!-- mangler links til drinks -->
+          </div>
+        </article>
+      </section>
+    </main>
     <script src="js/login.js"></script>
-</body>
+  </body>
 </html>
