makes header+footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="css/general.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="index.html"><img src="img/svg/Frame.svg" alt="" /></a>
+        </div>
+
+        <ul class="nav-links">
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="locations.html">LOCATIONS</a></li>
+          <li><a href="menu.html">MENU</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+    </main>
+    <footer class="footer">
+      <div class="footer-left">
+        <img src="img/svg/Frame.svg" class="footer-logo" alt="Logo" />
+
+        <div class="socials">
+          <a href="https://www.tiktok.com/@jojococktailbar" class="social-btn"><img src="img/svg/tiktok.svg" alt="" /></a>
+          <a href="https://www.instagram.com/jojococktailbar/" class="social-btn"><img src="img/svg/ig.svg" alt="" /></a>
+        </div>
+      </div>
+
+      <div class="footer-right">
+        <p>GET IN TOUCH: <a href="mailto:hi@jojo.dk">HI@JOJO.DK</a></p>
+
+        <p>
+          JOIN THE JOJO FAM:
+          <a href="#" class="apply-btn">APPLY HERE</a>
+        </p>
+      </div>
+    </footer>
+
     <script src="js/login.js"></script>
-</body>
+  </body>
 </html>
