--- a/about.html
+++ b/about.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/custom.css" />
     <title>Document</title>
   </head>
   <body>
     <main>
       <h1>ABOUT JOJO</h1>
-      <section>
+      <section class="about_grid-1-1" id="story">
         <div>
           <h2>OUR CREW AND STORY</h2>
           <p>
@@ -26,9 +29,9 @@
           <!-- mangler img -->
         </div>
       </section>
-      <section>
+      <section id="organic">
         <h2>INGREDIENTS</h2>
-        <article>
+        <article class="about_grid-1-1">
           <div>
             <!-- mangler 2x img -->
           </div>
@@ -42,8 +45,8 @@
           </div>
         </article>
       </section>
-      <section>
-        <article>
+      <section class="about_grid-1-1" id="ingredients">
+        <article id="lemon">
           <div>
             <!-- mangler img -->
           </div>
@@ -56,9 +59,7 @@
             <!-- mangler links til drinks -->
           </div>
         </article>
-      </section>
-      <section>
-        <article>
+        <article id="rum">
           <div>
             <!-- mangler img -->
           </div>
@@ -71,9 +72,7 @@
             <!-- mangler links til drinks -->
           </div>
         </article>
-      </section>
-      <section>
-        <article>
+        <article id="coconut">
           <div>
             <!-- mangler img -->
           </div>
@@ -86,9 +85,7 @@
             <!-- mangler links til drinks -->
           </div>
         </article>
-      </section>
-      <section>
-        <article>
+        <article id="whiskey">
           <div>
             <!-- mangler img -->
           </div>
@@ -101,6 +98,9 @@
             <!-- mangler links til drinks -->
           </div>
         </article>
+      </section>
+      <section id="gallery">
+        <!-- 6x img -->
       </section>
     </main>
     <script src="js/login.js"></script>
