påbegyndt css og classes på about us

--- a/about.html
+++ b/about.html
@@ -10,6 +10,19 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="index.html"><img src="img/svg/Frame.svg" alt="" /></a>
+        </div>
+
+        <ul class="nav-links">
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="locations.html">LOCATIONS</a></li>
+          <li><a href="menu.html">MENU</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <h1>ABOUT JOJO</h1>
       <section class="about_grid-1-1" id="story">
@@ -56,7 +69,10 @@
           </div>
           <div>
             <h4>USED IN</h4>
-            <!-- mangler links til drinks -->
+            <!-- id i links skal ændres -->
+            <a href="menu.html#cherryfizz">CHERRY FIZZ</a>
+            <a href="menu.html#basilsmash">BASIL SMASH</a>
+            <a href="menu.html#grapefruitspritz">GRAPEFRUIT SPRITZ</a>
           </div>
         </article>
         <article id="rum">
@@ -69,7 +85,11 @@
           </div>
           <div>
             <h4>USED IN</h4>
-            <!-- mangler links til drinks -->
+            <!-- id i links skal ændres -->
+            <a href="menu.html#amarettosour">AMARETTO SOUR</a>
+            <a href="menu.html#takamango">TAKAMANGO</a>
+            <a href="menu.html#rhubarbdaiquiri">RHUBARB DAIQUIRI</a>
+            <a href="menu.html#whiterebel">WHITE REBEL</a>
           </div>
         </article>
         <article id="coconut">
@@ -82,7 +102,9 @@
           </div>
           <div>
             <h4>USED IN</h4>
-            <!-- mangler links til drinks -->
+            <!-- id i links skal ændres -->
+            <a href="menu.html#takamango">TAKAMANGO</a>
+            <a href="menu.html#whiterebel">WHITE REBEL</a>
           </div>
         </article>
         <article id="whiskey">
@@ -95,7 +117,9 @@
           </div>
           <div>
             <h4>USED IN</h4>
-            <!-- mangler links til drinks -->
+            <!-- id i links skal ændres -->
+            <a href="menu.html#amarettosour">AMARETTO SOUR</a>
+            <a href="menu.html#cherryfizz">CHERRY FIZZ</a>
           </div>
         </article>
       </section>
@@ -103,9 +127,25 @@
         <!-- 6x img -->
       </section>
     </main>
-    <title>Document</title>
-  </head>
-  <body>
+    <footer class="footer">
+      <div class="footer-left">
+        <img src="img/svg/Frame.svg" class="footer-logo" alt="Logo" />
+
+        <div class="socials">
+          <a href="https://www.tiktok.com/@jojococktailbar" class="social-btn"><img src="img/svg/tiktok.svg" alt="" /></a>
+          <a href="https://www.instagram.com/jojococktailbar/" class="social-btn"><img src="img/svg/ig.svg" alt="" /></a>
+        </div>
+      </div>
+
+      <div class="footer-right">
+        <p>GET IN TOUCH: <a href="mailto:hi@jojo.dk">HI@JOJO.DK</a></p>
+
+        <p>
+          JOIN THE JOJO FAM:
+          <a href="#" class="apply-btn">APPLY HERE</a>
+        </p>
+      </div>
+    </footer>
     <script src="js/login.js"></script>
   </body>
 </html>
