--- a/locations.html
+++ b/locations.html
@@ -1,12 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/locations.css" />
+    <link rel="stylesheet" href="css/general.css" />
+    <title>Location</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="index.html"><img src="img/svg/Frame.svg" alt="" /></a>
+        </div>
+
+        <ul class="nav-links">
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="locations.html">LOCATIONS</a></li>
+          <li><a href="menu.html">MENU</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>LOCATIONS</h1>
+      <section>
+        <h2>NØRREBRO</h2>
+        <h3>MJØLNERPARKEN 26, 2200 COPENHAGEN N</h3>
+        <article class="grid_1-1-1-1">
+          <div class="galleri">
+            <img class="facade" src="img/facade.png" alt="facade" />
+            <img class="indefor" src="img/indenfor.png" alt="indefor" />
+            <img class="stemning" src="img/stemning.png" alt="stemning" />
+          </div>
+          <div class="opening_hours1">
+            <h4>OPENING HOURS</h4>
+            <div class="days">
+              <p>MON</p>
+              <p>TUE</p>
+              <p>WED</p>
+              <p>THU</p>
+              <p>FRI</p>
+              <p>SAT</p>
+              <p>SUN</p>
+            </div>
+            <div class="hours">
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>14:00-00:00</p>
+              <p>14:00-00:00</p>
+              <p>15:00-00:00</p>
+            </div>
+            <a href="">Find your way</a>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h2 class="location">VESTERBRO</h2>
+        <h3 class="location">VESTERBROGADE 47, 1620 COPENHAGEN V</h3>
+        <article class="grid_1-1-1-1">
+          <div class="galleri galleri2">
+            <img class="facade" src="img/facade.png" alt="facade" />
+            <img class="indefor" src="img/indenfor.png" alt="indefor" />
+            <img class="stemning" src="img/stemning.png" alt="stemning" />
+          </div>
+          <div class="opening_hours2">
+            <h4>OPENING HOURS</h4>
+            <div class="days">
+              <p>MON</p>
+              <p>TUE</p>
+              <p>WED</p>
+              <p>THU</p>
+              <p>FRI</p>
+              <p>SAT</p>
+              <p>SUN</p>
+            </div>
+            <div class="hours">
+              <p>15:00-01:00</p>
+              <p>15:00-01:00</p>
+              <p>15:00-01:00</p>
+              <p>15:00-01:00</p>
+              <p>14:00-02:00</p>
+              <p>14:00-02:00</p>
+              <p>15:00-01:00</p>
+            </div>
+            <a href="">Find your way</a>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h2>VESTERBRO</h2>
+        <h3>SUNDEVEDSGADE 4, 1751 COPENHAGEN V</h3>
+        <article class="grid_1-1-1-1">
+          <div class="galleri">
+            <img class="facade" src="img/facade.png" alt="facade" />
+            <img class="indenfor" src="img/indenfor.png" alt="indefor" />
+            <img class="stemning" src="img/stemning.png" alt="stemning" />
+          </div>
+          <div class="opening_hours1">
+            <h4>OPENING HOURS</h4>
+            <div class="days">
+              <p>MON</p>
+              <p>TUE</p>
+              <p>WED</p>
+              <p>THU</p>
+              <p>FRI</p>
+              <p>SAT</p>
+              <p>SUN</p>
+            </div>
+            <div class="hours">
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+              <p>15:00-00:00</p>
+            </div>
+            <a href="">Find your way</a>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h2 class="location">AARHUS</h2>
+        <h3 class="location">ÅBOULEVARDEN 64, 8000 AARHUS C</h3>
+        <article class="grid_1-1-1-1">
+          <div class="galleri galleri2">
+            <img class="facade" src="img/facade.png" alt="facade" />
+            <img class="indefor" src="img/indenfor.png" alt="indefor" />
+            <img class="stemning" src="img/stemning.png" alt="stemning" />
+          </div>
+          <div class="opening_hours2">
+            <h4>OPENING HOURS</h4>
+            <div class="days">
+              <p>MON</p>
+              <p>TUE</p>
+              <p>WED</p>
+              <p>THU</p>
+              <p>FRI</p>
+              <p>SAT</p>
+              <p>SUN</p>
+            </div>
+            <div class="hours">
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+              <p>PENDING...</p>
+            </div>
+            <a href="">Find your way</a>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-left">
+        <img src="img/svg/Frame.svg" class="footer-logo" alt="Logo" />
+
+        <div class="socials">
+          <a href="https://www.tiktok.com/@jojococktailbar" class="social-btn"
+            ><img src="img/svg/tiktok.svg" alt=""
+          /></a>
+          <a
+            href="https://www.instagram.com/jojococktailbar/"
+            class="social-btn"
+            ><img src="img/svg/ig.svg" alt=""
+          /></a>
+        </div>
+      </div>
+
+      <div class="footer-right">
+        <p>GET IN TOUCH: <a href="mailto:hi@jojo.dk">HI@JOJO.DK</a></p>
+
+        <p>
+          JOIN THE JOJO FAM:
+          <a href="#" class="apply-btn">APPLY HERE</a>
+        </p>
+      </div>
+    </footer>
     <script src="js/login.js"></script>
-</body>
+  </body>
 </html>
