--- a/menu.html
+++ b/menu.html
@@ -47,25 +47,176 @@
       </nav>
     </header>
     <main>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+      <!-- <h1>MENU</h1>
+      <section class="menu-container1">
+        <div></div>
+        <div class="carousel">
+          <button class="arrow left" id="prevBtn">❮</button>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+          <div class="carousel-content">
+            <div class="item active">
+              <img src="img/indenfor.png" alt="Billede 1" />
+              <h2>Gin Hass</h2>
+            </div>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+            <div class="item">
+              <img src="img/indenfor.png" alt="Billede 2" />
+              <h2>Mojito</h2>
+            </div>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+            <div class="item">
+              <img src="img/indenfor.png" alt="Billede 3" />
+              <h2>Espresso Martini</h2>
+            </div>
+          </div>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+          <button class="arrow right" id="nextBtn">❯</button>
+        </div>
+      </section>
+      <section class="menu-container2"></section>
+      <section class="menu-container3"></section> -->
+      <section class="menu-container1">
+        <div class="menu-list">
+          <h2 class="menu-title">COCKTAILS - 50,-</h2>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo vitae nemo nam, praesentium veritatis reprehenderit ullam! Voluptas illum iure quis rerum eos.</p>
+          <div class="drink-item">
+            <h3>BASIL SMASH</h3>
+            <p>basil - lemon - gin</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>PISCO SOUR</h3>
+            <p>pear - lime - barsol pisco</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>YUZU MARGARITA</h3>
+            <p>yuzu - shiso - lime - tequila</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>GRAPEFRUIT SPRITZ</h3>
+            <p>grapefruit - lemon - amaro - jack d</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>TAKAMANGO</h3>
+            <p>mango - coconut - rum</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>CHERRY FIZZ</h3>
+            <p>cherry - lemon - amaro - jack d</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>WHITE REBEL</h3>
+            <p>coffee - coconut - rum - cream</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>AMARETTO SOUR</h3>
+            <p>pear - citrus - white rum - tonka</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>RHUBARB DAIQUIRI</h3>
+            <p>rhubarb - citrus - tonka rum - vanilla</p>
+          </div>
+        </div>
+
+        <div class="carousel">
+          <button class="arrow left" id="prevBtn1">❮</button>
+          <div class="carousel-content">
+            <div class="item active">
+              <img src="img/indenfor.png" alt="Basil Smash" />
+              <h2 class="drink-name">BASIL SMASH</h2>
+            </div>
+            <div class="item">
+              <img src="img/indenfor.png" alt="Pisco Sour" />
+              <h2 class="drink-name">PISCO SOUR</h2>
+            </div>
+            <div class="item">
+              <img src="img/indenfor.png" alt="Yuzu Margarita" />
+              <h2 class="drink-name">YUZU MARGARITA</h2>
+            </div>
+          </div>
+          <button class="arrow right" id="nextBtn1">❯</button>
+        </div>
+      </section>
+
+      <section class="menu-container2">
+        <div class="carousel">
+          <button class="arrow left" id="prevBtn2">❮</button>
+          <div class="carousel-content">
+            <div class="item active">
+              <img src="img/indenfor.png" alt="Apricot & Mint" />
+              <h2 class="drink-name">APRICOT & MINT</h2>
+            </div>
+            <div class="item">
+              <img src="img/indenfor.png" alt="Grapefruit & Almond" />
+              <h2 class="drink-name">GRAPEFRUIT & ALMOND</h2>
+            </div>
+          </div>
+          <button class="arrow right" id="nextBtn2">❯</button>
+        </div>
+
+        <div class="menu-list">
+          <h2 class="menu-title">ALCOHOL FREE - 40,-</h2>
+
+          <div class="drink-item">
+            <h3>APRICOT & MINT</h3>
+            <p>sundried fruit - minty - quenching</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>GRAPEFRUIT & ALMOND</h3>
+            <p>citrussy - almond - refreshing</p>
+          </div>
+
+          <div class="drink-item">
+            <h3>PINEAPPLE & SAGE</h3>
+            <p>exotic - herbal - lushy</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="menu-container3">
+        <div class="menu-list">
+          <h2 class="menu-title snacks-title">SNACKS AND MORE</h2>
+
+          <div class="section-group">
+            <h3 class="section-header">BEER</h3>
+            <div class="drink-item horizontal">
+              <span>GAMMA PILSNER</span>
+              <span class="price">40,-</span>
+            </div>
+          </div>
+
+          <div class="section-group">
+            <h3 class="section-header">SNACKS</h3>
+            <div class="drink-item horizontal">
+              <span>MIXED NUTS</span>
+              <span class="price">30,-</span>
+            </div>
+            <div class="drink-item horizontal">
+              <span>OLIVES</span>
+              <span class="price">35,-</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel">
+          <button class="arrow left" id="prevBtn3">❮</button>
+          <div class="carousel-content">
+            <div class="item active">
+              <img src="img/indenfor.png" alt="Beer" />
+              <h2 class="drink-name">BEER</h2>
+            </div>
+          </div>
+          <button class="arrow right" id="nextBtn3">❯</button>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer-left">
@@ -156,5 +307,6 @@
     </footer>
     <script src="js/login.js"></script>
     <script src="js/burger.js"></script>
+    <script src="js/menu.js"></script>
   </body>
 </html>
