font sizes changed

--- a/menu.html
+++ b/menu.html
@@ -194,7 +194,7 @@
           </div>
 
           <div class="section-group">
-            <h3 class="section-header">SNACKS</h3>
+            <h3>SNACKS</h3>
             <div class="drink-item horizontal">
               <span>MIXED NUTS</span>
               <span class="price">30,-</span>
