--- a/locations.html
+++ b/locations.html
@@ -69,7 +69,7 @@
             <img class="stemning" src="img/stemning.png" alt="stemning" />
           </div>
           <div class="opening_hours1">
-            <h4>OPENING HOURS</h4>
+            <h3>OPENING HOURS</h3>
             <div class="days">
               <p>MON</p>
               <p>TUE</p>
@@ -88,9 +88,11 @@
               <p>14:00-00:00</p>
               <p>15:00-00:00</p>
             </div>
-            <div class="apply-btn">
-              <a href="">Find your way</a>
-            </div>
+            <a
+              class="maps"
+              href="https://www.google.com/maps/place/Mj%C3%B8lnerparken+26,+2200+K%C3%B8benhavn/@55.7032057,12.5387401,17z/data=!3m1!4b1!4m6!3m5!1s0x4652524eb9b8fc39:0x919d2c3ef4af2147!8m2!3d55.7032027!4d12.541315!16s%2Fg%2F11nnkqwy68?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+              >Find your way</a
+            >
           </div>
         </article>
       </section>
@@ -104,7 +106,7 @@
             <img class="stemning" src="img/stemning.png" alt="stemning" />
           </div>
           <div class="opening_hours2">
-            <h4>OPENING HOURS</h4>
+            <h3>OPENING HOURS</h3>
             <div class="days">
               <p>MON</p>
               <p>TUE</p>
@@ -123,7 +125,11 @@
               <p>14:00-02:00</p>
               <p>15:00-01:00</p>
             </div>
-            <a href="">Find your way</a>
+            <a
+              class="maps"
+              href="https://www.google.com/maps/place/Vesterbrogade+47,+1620+K%C3%B8benhavn/@55.672004,12.5530399,17z/data=!3m1!4b1!4m6!3m5!1s0x46525374d21b83fb:0x604599acf3b8b835!8m2!3d55.672001!4d12.5556148!16s%2Fg%2F11q2vvms5l?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+              >Find your way</a
+            >
           </div>
         </article>
       </section>
@@ -137,7 +143,7 @@
             <img class="stemning" src="img/stemning.png" alt="stemning" />
           </div>
           <div class="opening_hours1">
-            <h4>OPENING HOURS</h4>
+            <h3>OPENING HOURS</h3>
             <div class="days">
               <p>MON</p>
               <p>TUE</p>
@@ -156,7 +162,11 @@
               <p>15:00-00:00</p>
               <p>15:00-00:00</p>
             </div>
-            <a href="">Find your way</a>
+            <a
+              class="maps"
+              href="https://www.google.com/maps/place/Sundevedsgade+4,+1751+K%C3%B8benhavn/@55.6707196,12.5413646,17z/data=!3m1!4b1!4m6!3m5!1s0x4652539ed8e49f51:0x1712356b90659801!8m2!3d55.6707166!4d12.5439395!16s%2Fg%2F11c3q3mkys?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+              >Find your way</a
+            >
           </div>
         </article>
       </section>
@@ -170,7 +180,7 @@
             <img class="stemning" src="img/stemning.png" alt="stemning" />
           </div>
           <div class="opening_hours2">
-            <h4>OPENING HOURS</h4>
+            <h3>OPENING HOURS</h3>
             <div class="days">
               <p>MON</p>
               <p>TUE</p>
@@ -189,7 +199,11 @@
               <p>PENDING...</p>
               <p>PENDING...</p>
             </div>
-            <a href="">Find your way</a>
+            <a
+              class="maps"
+              href="https://www.google.com/maps/place/%C3%85boulevarden+64,+8000+Aarhus/@56.1569022,10.188881,15z/data=!3m1!4b1!4m6!3m5!1s0x464c3f9154b87b87:0xbb69f9dc78d360c1!8m2!3d56.1568916!4d10.2073349!16s%2Fg%2F11q2nk7thr?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+              >Find your way</a
+            >
           </div>
         </article>
       </section>
