--- a/menu.html
+++ b/menu.html
@@ -75,53 +75,58 @@
       </section>
       <section class="menu-container2"></section>
       <section class="menu-container3"></section> -->
+      <h1>MENU</h1>
       <section class="menu-container1">
         <div class="menu-list">
-          <h2 class="menu-title">COCKTAILS - 50,-</h2>
-
-          <div class="drink-item">
-            <h3>BASIL SMASH</h3>
-            <p>basil - lemon - gin</p>
+          <div class="menu-title">
+            <h2>COCKTAILS</h2>
+            <h3>50,-</h3>
           </div>
+          <div class="cocktails">
+            <div class="drink-item">
+              <h3>BASIL SMASH</h3>
+              <p>basil - lemon - gin</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>PISCO SOUR</h3>
-            <p>pear - lime - barsol pisco</p>
-          </div>
+            <div class="drink-item">
+              <h3>PISCO SOUR</h3>
+              <p>pear - lime - barsol pisco</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>YUZU MARGARITA</h3>
-            <p>yuzu - shiso - lime - tequila</p>
-          </div>
+            <div class="drink-item">
+              <h3>YUZU MARGARITA</h3>
+              <p>yuzu - shiso - lime - tequila</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>GRAPEFRUIT SPRITZ</h3>
-            <p>grapefruit - lemon - amaro - jack d</p>
-          </div>
+            <div class="drink-item">
+              <h3>GRAPEFRUIT SPRITZ</h3>
+              <p>grapefruit - lemon - amaro - jack d</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>TAKAMANGO</h3>
-            <p>mango - coconut - rum</p>
-          </div>
+            <div class="drink-item">
+              <h3>TAKAMANGO</h3>
+              <p>mango - coconut - rum</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>CHERRY FIZZ</h3>
-            <p>cherry - lemon - amaro - jack d</p>
-          </div>
+            <div class="drink-item">
+              <h3>CHERRY FIZZ</h3>
+              <p>cherry - lemon - amaro - jack d</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>WHITE REBEL</h3>
-            <p>coffee - coconut - rum - cream</p>
-          </div>
+            <div class="drink-item">
+              <h3>WHITE REBEL</h3>
+              <p>coffee - coconut - rum - cream</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>AMARETTO SOUR</h3>
-            <p>pear - citrus - white rum - tonka</p>
-          </div>
+            <div class="drink-item">
+              <h3>AMARETTO SOUR</h3>
+              <p>pear - citrus - white rum - tonka</p>
+            </div>
 
-          <div class="drink-item">
-            <h3>RHUBARB DAIQUIRI</h3>
-            <p>rhubarb - citrus - tonka rum - vanilla</p>
+            <div class="drink-item">
+              <h3>RHUBARB DAIQUIRI</h3>
+              <p>rhubarb - citrus - tonka rum - vanilla</p>
+            </div>
           </div>
         </div>
 
@@ -129,16 +134,40 @@
           <button class="arrow left" id="prevBtn1">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/indenfor.png" alt="Basil Smash" />
+              <img src="img/basil_smash.webp" alt="Basil Smash" />
               <h2 class="drink-name">BASIL SMASH</h2>
             </div>
             <div class="item">
-              <img src="img/indenfor.png" alt="Pisco Sour" />
+              <img src="img/pisco_sour.webp" alt="Pisco Sour" />
               <h2 class="drink-name">PISCO SOUR</h2>
             </div>
             <div class="item">
-              <img src="img/indenfor.png" alt="Yuzu Margarita" />
+              <img src="img/spicy_margarita.webp" alt="Yuzu Margarita" />
               <h2 class="drink-name">YUZU MARGARITA</h2>
+            </div>
+            <div class="item">
+              <img src="img/grapefruit_spritz.webp" alt="Grapefruit Spritz" />
+              <h2 class="drink-name">GRAPEFRUIT SPRITZ</h2>
+            </div>
+            <div class="item">
+              <img src="img/takamango.webp" alt="Takamango" />
+              <h2 class="drink-name">TAKAMANGO</h2>
+            </div>
+            <div class="item">
+              <img src="img/cherry_fizz.webp" alt="Cherry Fizz" />
+              <h2 class="drink-name">CHERRY FIZZ</h2>
+            </div>
+            <div class="item">
+              <img src="img/white_rebel.webp" alt="White rebel" />
+              <h2 class="drink-name">WHITE REBEL</h2>
+            </div>
+            <div class="item">
+              <img src="img/amaretto_sour.webp" alt="Amaretto Sour" />
+              <h2 class="drink-name">AMARETTO SOUR</h2>
+            </div>
+            <div class="item">
+              <img src="img/rhubarb_daiquiri.webp" alt="Rhubarb Daiquiri" />
+              <h2 class="drink-name">RHUBARB DAIQUIRI</h2>
             </div>
           </div>
           <button class="arrow right" id="nextBtn1">❯</button>
@@ -150,19 +179,26 @@
           <button class="arrow left" id="prevBtn2">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/indenfor.png" alt="Apricot & Mint" />
+              <img src="img/rhubarb_daiquiri.webp" alt="Apricot & Mint" />
               <h2 class="drink-name">APRICOT & MINT</h2>
             </div>
             <div class="item">
-              <img src="img/indenfor.png" alt="Grapefruit & Almond" />
+              <img src="img/grapefruit_spritz.webp" alt="Grapefruit & Almond" />
               <h2 class="drink-name">GRAPEFRUIT & ALMOND</h2>
+            </div>
+            <div class="item">
+              <img src="img/pineapple_sage_mock.webp" alt="Pineapple & Sage" />
+              <h2 class="drink-name">PINEAPPLE & SAGE</h2>
             </div>
           </div>
           <button class="arrow right" id="nextBtn2">❯</button>
         </div>
 
         <div class="menu-list">
-          <h2 class="menu-title">ALCOHOL FREE - 40,-</h2>
+          <div class="menu-title">
+            <h2>ALCOHOL FREE</h2>
+            <h3>40,-</h3>
+          </div>
 
           <div class="drink-item">
             <h3>APRICOT & MINT</h3>
@@ -188,20 +224,20 @@
           <div class="section-group">
             <h3 class="section-header">BEER</h3>
             <div class="drink-item horizontal">
-              <span>GAMMA PILSNER</span>
-              <span class="price">40,-</span>
+              <h4>GAMMA PILSNER</h4>
+              <p class="price">40,-</p>
             </div>
           </div>
 
           <div class="section-group">
             <h3>SNACKS</h3>
             <div class="drink-item horizontal">
-              <span>MIXED NUTS</span>
-              <span class="price">30,-</span>
+              <h4>MIXED NUTS</h4>
+              <p class="price">30,-</p>
             </div>
             <div class="drink-item horizontal">
-              <span>OLIVES</span>
-              <span class="price">35,-</span>
+              <h4>OLIVES</h4>
+              <p class="price">35,-</p>
             </div>
           </div>
         </div>
@@ -210,8 +246,16 @@
           <button class="arrow left" id="prevBtn3">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/indenfor.png" alt="Beer" />
-              <h2 class="drink-name">BEER</h2>
+              <img src="img/gamma_beer.webp" alt="Gamma Pilsner" />
+              <h2 class="drink-name">GAMMA PILSNER</h2>
+            </div>
+            <div class="item">
+              <img src="img/grapefruit_spritz.webp" alt="Mixed nuts" />
+              <h2 class="drink-name">MIXED NUTS</h2>
+            </div>
+            <div class="item">
+              <img src="img/pineapple_sage_mock.webp" alt="Olives" />
+              <h2 class="drink-name">OLIVES</h2>
             </div>
           </div>
           <button class="arrow right" id="nextBtn3">❯</button>
