tilføjet gallery med animation

--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
             <div class="cta-menu">
               <a href="menu.html#cherryfizz" class="cta-yellow">CHERRY FIZZ</a>
               <a href="menu.html#basilsmash" class="cta-yellow">BASIL SMASH</a>
-              </div>
-              <div class="expanded">
+            </div>
+            <div class="expanded">
               <a href="menu.html#grapefruitspritz" class="cta-yellow">GRAPEFRUIT SPRITZ</a>
             </div>
           </div>
@@ -117,8 +117,8 @@
             <div class="cta-menu">
               <a href="menu.html#amarettosour" class="cta-yellow">AMARETTO SOUR</a>
               <a href="menu.html#takamango" class="cta-yellow">TAKAMANGO</a>
-              </div>
-              <div class="cta-menu" class="expanded">
+            </div>
+            <div class="cta-menu" class="expanded">
               <a href="menu.html#rhubarbdaiquiri" class="cta-yellow">RHUBARB DAIQUIRI</a>
               <a href="menu.html#whiterebel" class="cta-yellow">WHITE REBEL</a>
             </div>
@@ -157,19 +157,33 @@
           </div>
         </article>
       </section>
-      <!-- <section id="gallery">
-        <img src="img/amaretto_sour.webp" alt="amaretto sour" />
-        <img src="img/basil_smash.webp" alt="basil smash" />
-        <img src="img/cherry_fizz.webp" alt="cherry fizz" />
-        <img src="img/grapefruit_spritz.webp" alt="grapefruit spritz" />
-        <img src="img/pisco_sour.webp" alt="pisco sour" />
-        <img src="img/rhubarb_daiquiri.webp" alt="rhubarb daiguiri" />
-        <img src="img/spicy_margarita.webp" alt="spicy margarita" />
-        <img src="img/takamango.webp" alt="takamango" />
-        <img src="img/white_rebel.webp" alt="white rebel" />
-        <img src="img/pineapple_sage_mock.webp" alt="pineapple sage" />
-        <img src="img/gamma_beer.webp" alt="gamma beer" />
-      </section> -->
+      <section id="gallery-container" class="red">
+        <div id="gallery">
+          <img src="img/amaretto_sour.webp" alt="amaretto sour" />
+          <img src="img/basil_smash.webp" alt="basil smash" />
+          <img src="img/cherry_fizz.webp" alt="cherry fizz" />
+          <img src="img/grapefruit_spritz.webp" alt="grapefruit spritz" />
+          <img src="img/pisco_sour.webp" alt="pisco sour" />
+          <img src="img/rhubarb_daiquiri.webp" alt="rhubarb daiguiri" />
+          <img src="img/spicy_margarita.webp" alt="spicy margarita" />
+          <img src="img/takamango.webp" alt="takamango" />
+          <img src="img/white_rebel.webp" alt="white rebel" />
+          <img src="img/pineapple_sage_mock.webp" alt="pineapple sage" />
+          <img src="img/gamma_beer.webp" alt="gamma beer" />
+          <!-- duplikeret for et lille loop -->
+          <img src="img/amaretto_sour.webp" alt="amaretto sour" />
+          <img src="img/basil_smash.webp" alt="basil smash" />
+          <img src="img/cherry_fizz.webp" alt="cherry fizz" />
+          <img src="img/grapefruit_spritz.webp" alt="grapefruit spritz" />
+          <img src="img/pisco_sour.webp" alt="pisco sour" />
+          <img src="img/rhubarb_daiquiri.webp" alt="rhubarb daiguiri" />
+          <img src="img/spicy_margarita.webp" alt="spicy margarita" />
+          <img src="img/takamango.webp" alt="takamango" />
+          <img src="img/white_rebel.webp" alt="white rebel" />
+          <img src="img/pineapple_sage_mock.webp" alt="pineapple sage" />
+          <img src="img/gamma_beer.webp" alt="gamma beer" />
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer-left">
