--- a/menu.html
+++ b/menu.html
@@ -47,34 +47,6 @@
       </nav>
     </header>
     <main>
-      <!-- <h1>MENU</h1>
-      <section class="menu-container1">
-        <div></div>
-        <div class="carousel">
-          <button class="arrow left" id="prevBtn">❮</button>
-
-          <div class="carousel-content">
-            <div class="item active">
-              <img src="img/indenfor.png" alt="Billede 1" />
-              <h2>Gin Hass</h2>
-            </div>
-
-            <div class="item">
-              <img src="img/indenfor.png" alt="Billede 2" />
-              <h2>Mojito</h2>
-            </div>
-
-            <div class="item">
-              <img src="img/indenfor.png" alt="Billede 3" />
-              <h2>Espresso Martini</h2>
-            </div>
-          </div>
-
-          <button class="arrow right" id="nextBtn">❯</button>
-        </div>
-      </section>
-      <section class="menu-container2"></section>
-      <section class="menu-container3"></section> -->
       <h1>MENU</h1>
       <section class="menu-container1">
         <div class="menu-list">
@@ -134,39 +106,39 @@
           <button class="arrow left" id="prevBtn1">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/basil_smash.webp" alt="Basil Smash" />
+              <img id="basilsmash" src="img/basil_smash.webp" alt="Basil Smash" />
               <h2 class="drink-name">BASIL SMASH</h2>
             </div>
             <div class="item">
-              <img src="img/pisco_sour.webp" alt="Pisco Sour" />
+              <img id="piscosour" src="img/pisco_sour.webp" alt="Pisco Sour" />
               <h2 class="drink-name">PISCO SOUR</h2>
             </div>
             <div class="item">
-              <img src="img/spicy_margarita.webp" alt="Yuzu Margarita" />
+              <img id="yuzumargarita" src="img/spicy_margarita.webp" alt="Yuzu Margarita" />
               <h2 class="drink-name">YUZU MARGARITA</h2>
             </div>
             <div class="item">
-              <img src="img/grapefruit_spritz.webp" alt="Grapefruit Spritz" />
+              <img id="grapefruitspritz" src="img/grapefruit_spritz.webp" alt="Grapefruit Spritz" />
               <h2 class="drink-name">GRAPEFRUIT SPRITZ</h2>
             </div>
             <div class="item">
-              <img src="img/takamango.webp" alt="Takamango" />
+              <img id="takamango" src="img/takamango.webp" alt="Takamango" />
               <h2 class="drink-name">TAKAMANGO</h2>
             </div>
             <div class="item">
-              <img src="img/cherry_fizz.webp" alt="Cherry Fizz" />
+              <img id="cherryfizz" src="img/cherry_fizz.webp" alt="Cherry Fizz" />
               <h2 class="drink-name">CHERRY FIZZ</h2>
             </div>
             <div class="item">
-              <img src="img/white_rebel.webp" alt="White rebel" />
+              <img id="whiterebel" src="img/white_rebel.webp" alt="White rebel" />
               <h2 class="drink-name">WHITE REBEL</h2>
             </div>
             <div class="item">
-              <img src="img/amaretto_sour.webp" alt="Amaretto Sour" />
+              <img id="amarettosour" src="img/amaretto_sour.webp" alt="Amaretto Sour" />
               <h2 class="drink-name">AMARETTO SOUR</h2>
             </div>
             <div class="item">
-              <img src="img/rhubarb_daiquiri.webp" alt="Rhubarb Daiquiri" />
+              <img id="rhubarbdaiquiri" src="img/rhubarb_daiquiri.webp" alt="Rhubarb Daiquiri" />
               <h2 class="drink-name">RHUBARB DAIQUIRI</h2>
             </div>
           </div>
@@ -179,15 +151,15 @@
           <button class="arrow left" id="prevBtn2">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/rhubarb_daiquiri.webp" alt="Apricot & Mint" />
+              <img id="apricot&mint" src="img/rhubarb_daiquiri.webp" alt="Apricot & Mint" />
               <h2 class="drink-name">APRICOT & MINT</h2>
             </div>
             <div class="item">
-              <img src="img/grapefruit_spritz.webp" alt="Grapefruit & Almond" />
+              <img id="grapefruit&almond" src="img/grapefruit_spritz.webp" alt="Grapefruit & Almond" />
               <h2 class="drink-name">GRAPEFRUIT & ALMOND</h2>
             </div>
             <div class="item">
-              <img src="img/pineapple_sage_mock.webp" alt="Pineapple & Sage" />
+              <img id="pineapple&sage" src="img/pineapple_sage_mock.webp" alt="Pineapple & Sage" />
               <h2 class="drink-name">PINEAPPLE & SAGE</h2>
             </div>
           </div>
@@ -219,25 +191,25 @@
 
       <section class="menu-container3">
         <div class="menu-list">
-          <h2 class="menu-title snacks-title">SNACKS AND MORE</h2>
+          <h2 class="menu-title">SNACKS AND MORE</h2>
 
           <div class="section-group">
             <h3 class="section-header">BEER</h3>
-            <div class="drink-item horizontal">
+            <div class="drink-item price">
               <h4>GAMMA PILSNER</h4>
-              <p class="price">40,-</p>
+              <p>40,-</p>
             </div>
           </div>
 
           <div class="section-group">
             <h3>SNACKS</h3>
-            <div class="drink-item horizontal">
+            <div class="drink-item price">
               <h4>MIXED NUTS</h4>
-              <p class="price">30,-</p>
+              <p>30,-</p>
             </div>
-            <div class="drink-item horizontal">
+            <div class="drink-item price">
               <h4>OLIVES</h4>
-              <p class="price">35,-</p>
+              <p>35,-</p>
             </div>
           </div>
         </div>
@@ -246,15 +218,15 @@
           <button class="arrow left" id="prevBtn3">❮</button>
           <div class="carousel-content">
             <div class="item active">
-              <img src="img/gamma_beer.webp" alt="Gamma Pilsner" />
+              <img id="gammapilsner" src="img/gamma_beer.webp" alt="Gamma Pilsner" />
               <h2 class="drink-name">GAMMA PILSNER</h2>
             </div>
             <div class="item">
-              <img src="img/grapefruit_spritz.webp" alt="Mixed nuts" />
+              <img id="mixednuts" src="img/nuts.webp" alt="Mixed nuts" />
               <h2 class="drink-name">MIXED NUTS</h2>
             </div>
             <div class="item">
-              <img src="img/pineapple_sage_mock.webp" alt="Olives" />
+              <img id="olives" src="img/olives.webp" alt="Olives" />
               <h2 class="drink-name">OLIVES</h2>
             </div>
           </div>
