--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/custom.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/burger.css" />
-    <title>Document</title>
+    <title>About us</title>
   </head>
   <body>
     <header>
