rettelser efter validering

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
         </article>
         <article id="rum" class="blue about_grid-1-1">
           <div class="img_container">
-            <img src="img/ingredients/rum .webp" alt="rum" />
+            <img src="img/ingredients/rum.webp" alt="rum" />
           </div>
           <div class="description">
             <h3>RUM</h3>
@@ -118,7 +118,7 @@
               <a href="menu.html#amarettosour" class="cta-yellow">AMARETTO SOUR</a>
               <a href="menu.html#takamango" class="cta-yellow">TAKAMANGO</a>
             </div>
-            <div class="cta-menu" class="expanded">
+            <div class="cta-menu expanded">
               <a href="menu.html#rhubarbdaiquiri" class="cta-yellow">RHUBARB DAIQUIRI</a>
               <a href="menu.html#whiterebel" class="cta-yellow">WHITE REBEL</a>
             </div>
